--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   background: #fafafa;
-  color: #C5E3FF; }
+  color: #01002F; }
   body.menu-show {
     overflow: hidden;
     position: fixed;
