--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   line-height: 1.8;
   font-size: 16px;
   font-weight: 400;
-  background: #fafafa;
+  background: #C5E3FF;
   color: #01002F; }
   body.menu-show {
     overflow: hidden;
